Fix texture paint accessing freed memory

Part of T60660